Update project files

--- a/app/src/main/res/layout/activity_sign_in_police.xml
+++ b/app/src/main/res/layout/activity_sign_in_police.xml
@@ -21,6 +21,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="250dp"
+        android:layout_height="48dp"
+        android:background="@drawable/edit_text_rounded"
+        android:elevation="8dp"
+        android:ems="10"
+        android:hint="@string/emailHint"
+        android:inputType="phone"
+        android:paddingLeft="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/signInButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintVertical_bias="0.284" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="250dp"
+        android:layout_height="48dp"
+        android:background="@drawable/edit_text_rounded"
+        android:elevation="8dp"
+        android:ems="10"
+        android:hint="@string/passwordHint"
+        android:inputType="phone"
+        android:paddingLeft="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/signInButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email"
+        app:layout_constraintVertical_bias="0.0" />
+
+
     <TextView
         android:id="@+id/signInButton"
         android:layout_width="0dp"
@@ -56,26 +93,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.224" />
-
-
-    <EditText
-        android:id="@+id/badgeNo"
-        android:layout_width="250dp"
-        android:layout_height="48dp"
-        android:background="@drawable/edit_text_rounded"
-        android:elevation="8dp"
-        android:ems="10"
-        android:hint="@string/badge_number"
-        android:inputType="phone"
-        android:paddingStart="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/signInButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.284" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
