--- a/app/src/main/res/layout/activity_sign_in_user.xml
+++ b/app/src/main/res/layout/activity_sign_in_user.xml
@@ -57,7 +57,7 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:src="@drawable/pinterest_profile_image"
