--- a/app/src/main/res/layout/recycler_view_violations.xml
+++ b/app/src/main/res/layout/recycler_view_violations.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/pic"
+                android:id="@+id/fawry_pic"
                 android:layout_width="143dp"
                 android:layout_height="118dp"
                 android:padding="5dp"
@@ -47,7 +47,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@id/pic"
+                app:layout_constraintStart_toEndOf="@id/fawry_pic"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.19999999" />
             <TextView
@@ -61,7 +61,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.1"
-                app:layout_constraintStart_toEndOf="@+id/pic"
+                app:layout_constraintStart_toEndOf="@+id/fawry_pic"
                 app:layout_constraintTop_toBottomOf="@id/name"
                 app:layout_constraintVertical_bias="0.32999998" />
 
