--- a/app/src/main/res/layout/activity_sign_in_police.xml
+++ b/app/src/main/res/layout/activity_sign_in_police.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".SignInPoliceActivity">
+    tools:context=".SignInOfficerActivity">
 
     <ImageButton
         android:id="@+id/backButton"
