--- a/app/src/main/res/layout/activity_sign_in_user.xml
+++ b/app/src/main/res/layout/activity_sign_in_user.xml
@@ -10,13 +10,13 @@
         android:id="@+id/backButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="32dp"
         android:alpha="0.7"
         android:background="@drawable/circle_shape"
         android:elevation="8dp"
         android:src="@drawable/ic_back"
-        app:layout_constraintEnd_toStartOf="@+id/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,7 +94,7 @@
         android:elevation="8dp"
         android:ems="10"
         android:hint="@string/passwordHint"
-        android:inputType="phone"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toTopOf="@+id/signInButton"
         app:layout_constraintEnd_toEndOf="parent"
