--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,7 +17,8 @@
         android:elevation="8dp"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 
     <TextView
@@ -26,10 +27,11 @@
         android:layout_height="50dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/button"
         android:elevation="8dp"
         android:fontFamily="sans-serif"
-        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:text="@string/register"
         android:textColor="@color/white"
@@ -38,21 +40,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.881" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/background" />
 
     <TextView
@@ -72,11 +73,44 @@
         app:layout_constraintTop_toTopOf="@+id/backButton" />
 
     <EditText
+        android:id="@+id/LicensePlate"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/edit_text_rounded"
+        android:elevation="8dp"
+        android:ems="10"
+        android:hint="@string/licenseplate"
+        android:inputType="text"
+        android:paddingLeft="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/PhoneNumber"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/edit_text_rounded"
+        android:elevation="8dp"
+        android:ems="10"
+        android:hint="@string/phoneHint"
+        android:inputType="text|phone"
+        android:paddingLeft="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/LicensePlate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <EditText
         android:id="@+id/firstName"
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/edit_text_rounded"
         android:elevation="8dp"
         android:ems="10"
@@ -102,7 +136,7 @@
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.247"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstName" />
 
@@ -119,7 +153,7 @@
         android:hint="@string/passwordHint"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/proceedButton"
+        app:layout_constraintBottom_toTopOf="@+id/PhoneNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,13 +163,13 @@
     <EditText
         android:id="@+id/confirmPassword"
         android:layout_width="310dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/edit_text_rounded"
-        android:ems="10"
         android:elevation="8dp"
+        android:ems="10"
         android:hint="@string/confirmPasswordHint"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
@@ -143,8 +177,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/LicensePlate"
+        app:layout_constraintVertical_bias="0.696" />
 
     <EditText
         android:id="@+id/lastName"
