--- a/app/src/main/res/layout/activity_officer_profile.xml
+++ b/app/src/main/res/layout/activity_officer_profile.xml
@@ -47,7 +47,7 @@
         android:fontFamily="sans-serif"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:text="@string/viewviolation"
+        android:text="@string/scanLPR"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -135,7 +135,6 @@
         android:hint="@string/phoneHint"
         android:inputType="phone"
         android:paddingLeft="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/scanLPR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,8 +151,8 @@
         android:background="@drawable/edit_text_rounded"
         android:ems="10"
         android:elevation="8dp"
-        android:hint="License Plate Number"
-        android:inputType="date"
+        android:hint="Badge Number"
+        android:inputType="text"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toTopOf="@+id/scanLPR"
         app:layout_constraintEnd_toEndOf="parent"
