--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -105,7 +105,7 @@
         app:layout_constraintTop_toBottomOf="@+id/profile" />
 
     <EditText
-        android:id="@+id/EmailSignUp"
+        android:id="@+id/BadgeEmailSignup"
         android:layout_width="310dp"
         android:layout_height="48dp"
         android:layout_marginLeft="50dp"
@@ -139,7 +139,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailSignUp"
+        app:layout_constraintTop_toBottomOf="@+id/BadgeEmailSignup"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
