--- a/app/src/main/res/layout/activity_sign_up_officer.xml
+++ b/app/src/main/res/layout/activity_sign_up_officer.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInUserActivity">
-
+    tools:context=".SignUpActivityOfficer">
     <ImageButton
         android:id="@+id/backButton"
         android:layout_width="48dp"
@@ -73,14 +72,14 @@
         app:layout_constraintTop_toTopOf="@+id/backButton" />
 
     <EditText
-        android:id="@+id/LicensePlate"
+        android:id="@+id/BadgeNo"
         android:layout_width="310dp"
         android:layout_height="48dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/edit_text_rounded"
         android:elevation="8dp"
         android:ems="10"
-        android:hint="@string/licenseplate"
+        android:hint="@string/badge_number"
         android:inputType="text"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
@@ -100,7 +99,7 @@
         android:hint="@string/phoneHint"
         android:inputType="text|phone"
         android:paddingLeft="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/LicensePlate"
+        app:layout_constraintBottom_toTopOf="@+id/BadgeNo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -123,7 +122,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <EditText
-        android:id="@+id/EmailSignUp"
+        android:id="@+id/BadgeEmailSignup"
         android:layout_width="310dp"
         android:layout_height="48dp"
         android:layout_marginLeft="50dp"
@@ -157,7 +156,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailSignUp"
+        app:layout_constraintTop_toBottomOf="@+id/BadgeEmailSignup"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
@@ -177,7 +176,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LicensePlate"
+        app:layout_constraintTop_toBottomOf="@+id/BadgeNo"
         app:layout_constraintVertical_bias="0.696" />
 
     <EditText
