Adding classes in the manifest and modification of User Activity

--- a/app/src/main/res/layout/activity_sign_in_police.xml
+++ b/app/src/main/res/layout/activity_sign_in_police.xml
@@ -31,7 +31,7 @@
         android:elevation="8dp"
         android:ems="10"
         android:hint="@string/emailBadgeHint"
-        android:inputType="phone"
+        android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toTopOf="@+id/signInButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:elevation="8dp"
         android:ems="10"
         android:hint="@string/passwordHint"
-        android:inputType="phone"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toTopOf="@+id/signInButton"
         app:layout_constraintEnd_toEndOf="parent"
