Camera is working properly rn

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
     <external-path
-        name="myimgs"
-        path="Android/data/com.example.dummycam/files/Pictures"/>
+        name="my_images"
+        path="Android/data/com.example.myapplication/files/Pictures"/>
+
 </paths>
