--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -1,4 +1,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/white" />
+
+    <!-- Shadow -->
+    <item android:right="2dp" android:left="2dp" android:bottom="4dp">
+        <shape
+            android:shape="oval">
+            <solid android:color="#000000"/>
+            <corners android:radius="5dp"/>
+        </shape>
+    </item>
 </shape>
