--- a/app/src/main/res/layout/congrats_popup.xml
+++ b/app/src/main/res/layout/congrats_popup.xml
@@ -48,7 +48,7 @@
         android:layout_height="62dp"
         android:layout_width="195dp"
         android:layout_marginBottom="20dp"
-        android:id="@+id/startButton"
+        android:id="@+id/ReturnToHomepage"
         android:text="@string/Completed"
         android:textSize="19sp"
         android:fontFamily="sans-serif"
