Violations Status changing and Code Generation

--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -116,7 +116,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/btn_pay"
+                android:id="@+id/btnPayCard"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:layout_below="@+id/expiry_date_layout"
