--- a/app/src/main/res/layout/generate_code_popup.xml
+++ b/app/src/main/res/layout/generate_code_popup.xml
@@ -40,7 +40,7 @@
         android:textSize="16sp"
         android:layout_marginBottom="15dp"/>
     <TextView
-        android:id="@+id/ReturnToHomepage"
+        android:id="@+id/proceedFawry"
         android:layout_width="175dp"
         android:layout_height="50dp"
         android:layout_marginStart="25dp"
