--- a/app/src/main/res/layout/congrats_popup.xml
+++ b/app/src/main/res/layout/congrats_popup.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <LinearLayout
-    android:elevation="8dp"
+<LinearLayout android:elevation="8dp"
     android:orientation="vertical"
     android:background="@drawable/rounded_popup"
     android:gravity="center"
     android:padding="16dp"
     android:layout_height="344dp"
     android:layout_width="263dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".Congrats"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:background="@drawable/circle_image_background"
@@ -42,13 +43,13 @@
         android:textSize="16sp"/>
 
     <TextView
+        android:id="@+id/ReturnToHomepage"
         android:elevation="8dp"
         android:background="@drawable/button"
         android:gravity="center"
         android:layout_height="62dp"
         android:layout_width="195dp"
         android:layout_marginBottom="20dp"
-        android:id="@+id/proceedFawry"
         android:text="@string/Completed"
         android:textSize="19sp"
         android:fontFamily="sans-serif"
