--- a/app/src/main/res/layout/activity_pick_violation.xml
+++ b/app/src/main/res/layout/activity_pick_violation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,175 +11,55 @@
         android:layout_height="wrap_content"
         android:text="-------"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/scroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/auto_complete_txt"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ImgViolation"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TextViolation" />
 
-    <ScrollView
-        android:id="@+id/scroll"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:layout_marginBottom="146dp"
-        android:overScrollMode="never"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ImgViolation"
-        >
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="16dp"
+            android:hint="Select Item"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
-            <androidx.cardview.widget.CardView
+            <AutoCompleteTextView
+                android:id="@+id/auto_complete_txt"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:layout_marginTop="100dp"
-                app:cardBackgroundColor="#F2F2F2"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
+                android:layout_height="wrap_content"
+                android:inputType="none" />
 
-                <ImageView
-                    android:layout_width="153dp"
-                    android:layout_height="wrap_content"
-                    android:elevation="3dp"
-                    android:src="@drawable/fine" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:paddingLeft="1in"
-                    android:text="Speeding Ticket"
-                    android:textColor="#1a323e"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/scanLPR"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="137dp"
+            android:background="@drawable/button"
+            android:elevation="8dp"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:text="Submit"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"  app:layout_constraintEnd_toEndOf="parent"/>
+    </RelativeLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:layout_marginTop="100dp"
-                app:cardBackgroundColor="#F2F2F2"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
-
-                <ImageView
-                    android:layout_width="153dp"
-                    android:layout_height="wrap_content"
-                    android:elevation="3dp"
-                    android:src="@drawable/fine" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:paddingLeft="1in"
-                    android:text="Double Parking"
-                    android:textColor="#1a323e"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:layout_marginTop="100dp"
-                app:cardBackgroundColor="#F2F2F2"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
-
-                <ImageView
-                    android:layout_width="153dp"
-                    android:layout_height="wrap_content"
-                    android:elevation="3dp"
-                    android:src="@drawable/fine" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:paddingLeft="1in"
-                    android:text="Running a Red Light"
-                    android:textColor="#1a323e"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:layout_marginTop="100dp"
-                app:cardBackgroundColor="#F2F2F2"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
-
-                <ImageView
-                    android:layout_width="153dp"
-                    android:layout_height="wrap_content"
-                    android:elevation="3dp"
-                    android:src="@drawable/fine" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:paddingLeft="1in"
-                    android:text="Stop Sign Violations"
-                    android:textColor="#1a323e"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:layout_marginTop="100dp"
-                app:cardBackgroundColor="#F2F2F2"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
-
-                <ImageView
-                    android:layout_width="153dp"
-                    android:layout_height="wrap_content"
-                    android:elevation="3dp"
-                    android:src="@drawable/fine" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:paddingLeft="1in"
-                    android:text="Illegal U turn"
-                    android:textColor="#1a323e"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
